--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+notebooks/cheapest_foods_100g.xlsx
+notebooks/~$cheapest_foods_100g.xlsx
