Cleaned up Day 2 of unused code

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,9 @@ notebooks/~$cheapest_foods_100g.xlsx
 
 
 temp
+notebooks/day_2_data/latvia_meteo_1925_messy.zip
+notebooks/day_2_xlsx/aluksne_1925.xlsx
+notebooks/day_2_xlsx/liepaja_1925.xlsx
+notebooks/day_2_xlsx/mersrags_1925.xlsx
+notebooks/day_2_xlsx/riga_university_1925_p1.xlsx
+notebooks/day_2_xlsx/riga_university_1925_p2.xlsx
